--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <div>
+    <h2>Master Changes du</h2>
+    <h2>Master</h2>
     <h2>Hi Teena</h2>
     <h2>Welcome to Git</h2>
     <h2>Hello World</h2>
